[package]
name = "spaced-repetition-rs"
description = "A spaced repetition algorithm based on anki and supermemo"
version = "0.1.0"
authors = ["Sebastian Schmidt <isibboi@gmail.com>"]
edition = "2021"
repository = "https://github.com/ISibboI/spaced-repetition-rs"
license = "BSD-2-Clause"
keywords = ["spaced", "repetition", "anki", "supermemo", "learn"]
categories = ["algorithms"]
rust-version = "1.56.1"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]

[dependencies]
chrono = {version = "0.4.19", features = ["serde"]}
serde = {version = "1.0.136", features = ["derive"]}