[package]
name = "spaced-repetition"
description = "A spaced repetition algorithm based on anki and supermemo"
version = "0.1.0"
authors = ["Sebastian Schmidt <isibboi@gmail.com>"]
edition = "2021"
repository = "https://github.com/ISibboI/spaced-repetition-rs"
license = "BSD-2-Clause"
keywords = ["spaced", "repetition", "anki", "supermemo", "learn"]
categories = ["algorithms"]
rust-version = "1.58.1"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]

[dependencies]
chrono = {version = "0.4.19", features = ["serde"]}
serde = {version = "1.0.136", features = ["derive"]}
rand = "0.8.5"
rand_distr = "0.4.3"

[dev-dependencies]
rand_chacha = "0.3.1"
